src/ui/features/environments/tests/snapshots/terracotta__ui__features__environments__tests__matrix__multi_demo_compare_same_open_165x50.snap
---
source: src/ui/features/environments/tests/matrix.rs
expression: buffer_visual_snapshot(&expanded_summary)
---
165x50
row 0: 0..165 fg=Reset bg=Reset modifier=NONE text="terracotta ▸ dev                                                                                                                                            terraform"
row 1: 0..3 fg=Cyan bg=Reset modifier=NONE text="┌* " | 3..14 fg=Reset bg=Reset modifier=BOLD text="[2] Compare" | 14..165 fg=Cyan bg=Reset modifier=NONE text="──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
row 2: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=DarkGray bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 3: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Yellow bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 4: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="Address                                        dev         stg         prod         why                                                                            " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 5: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 6: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..20 fg=Reset bg=Reset modifier=BOLD text="Differs across envs" | 20..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 7: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..48 fg=Reset bg=Reset modifier=NONE text="  terraform_data.dev_only                      " | 48..60 fg=Green bg=Reset modifier=NONE text="+           " | 60..164 fg=Reset bg=Reset modifier=NONE text="                         missing                                                                        " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 8: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 9: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..3 fg=Reset bg=Reset modifier=NONE text="> " | 3..4 fg=Reset bg=Reset modifier=BOLD text="▾" | 4..5 fg=Reset bg=Reset modifier=NONE text=" " | 5..39 fg=Reset bg=Reset modifier=BOLD text="Same change across envs: 2 changes" | 39..56 fg=DarkGray bg=Reset modifier=NONE text=" [unknown values]" | 56..59 fg=Yellow bg=Reset modifier=NONE text=" ~2" | 59..164 fg=Reset bg=Reset modifier=NONE text="  Space collapse                                                                                         " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 10: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..48 fg=Reset bg=Reset modifier=NONE text="  terraform_data.api                           " | 48..84 fg=Yellow bg=Reset modifier=NONE text="~           ~           ~           " | 84..164 fg=Reset bg=Reset modifier=NONE text="                                                                                " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 11: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..31 fg=Reset bg=Reset modifier=NONE text="  [+] terraform_data.server[*]" | 31..48 fg=DarkGray bg=Reset modifier=NONE text=" [unknown values]" | 48..84 fg=Yellow bg=Reset modifier=NONE text="~ 2         ~ 2         ~ 4         " | 84..164 fg=Reset bg=Reset modifier=NONE text="                                                                                " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 12: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 13: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 14: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 15: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 16: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 17: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 18: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 19: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 20: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 21: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 22: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 23: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 24: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 25: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 26: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 27: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 28: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 29: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 30: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 31: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 32: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 33: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 34: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 35: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 36: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 37: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 38: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 39: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 40: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 41: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 42: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 43: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 44: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 45: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 46: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="blank: absent   .: unchanged   ?: plan unavailable                                                                                                                 " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 47: 0..165 fg=Cyan bg=Reset modifier=NONE text="└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
row 48: 0..5 fg=Yellow bg=Reset modifier=NONE text="Enter" | 5..25 fg=Reset bg=Reset modifier=NONE text=" toggle same changes" | 25..28 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 28..29 fg=Yellow bg=Reset modifier=NONE text="v" | 29..39 fg=Reset bg=Reset modifier=NONE text=" full plan" | 39..42 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 42..43 fg=Yellow bg=Reset modifier=NONE text="/" | 43..50 fg=Reset bg=Reset modifier=NONE text=" filter" | 50..53 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 53..58 fg=Yellow bg=Reset modifier=NONE text="Space" | 58..76 fg=Reset bg=Reset modifier=NONE text=" collapse selected" | 76..79 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 79..80 fg=Yellow bg=Reset modifier=NONE text="[" | 80..81 fg=DarkGray bg=Reset modifier=NONE text="/" | 81..82 fg=Yellow bg=Reset modifier=NONE text="]" | 82..86 fg=Reset bg=Reset modifier=NONE text=" env" | 86..89 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 89..90 fg=Yellow bg=Reset modifier=NONE text="1" | 90..91 fg=DarkGray bg=Reset modifier=NONE text="/" | 91..92 fg=Yellow bg=Reset modifier=NONE text="2" | 92..93 fg=DarkGray bg=Reset modifier=NONE text="/" | 93..94 fg=Yellow bg=Reset modifier=NONE text="3" | 94..100 fg=Reset bg=Reset modifier=NONE text=" focus" | 100..103 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 103..104 fg=Yellow bg=Reset modifier=NONE text="f" | 104..105 fg=DarkGray bg=Reset modifier=NONE text="/" | 105..108 fg=Yellow bg=Reset modifier=NONE text="Esc" | 108..116 fg=Reset bg=Reset modifier=NONE text=" restore" | 116..119 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 119..120 fg=Yellow bg=Reset modifier=NONE text="?" | 120..125 fg=Reset bg=Reset modifier=NONE text=" help" | 125..128 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 128..129 fg=Yellow bg=Reset modifier=NONE text="q" | 129..165 fg=Reset bg=Reset modifier=NONE text=" quit                               "
row 49: 0..165 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                     "
