src/ui/features/environments/tests/snapshots/terracotta__ui__features__environments__tests__matrix__shared_workspace_40x16.snap
---
source: src/ui/features/environments/tests/matrix.rs
expression: output
---
0 Overview   1 staging  2 staging
Ready: 0/2   Compared: none   staging:
Error   staging: Error

 Synthetic acquisition error
 Address     > staging    why

 Waiting for environment plans.

 Total       Error

 blank: absent   .: unchanged
 ?: plan unavailable
 ↑↓ rows  ←→ env  Enter preview  [ ] en
 / filter  e env filter  v plan
 ? help  q quit
