src/ui/features/environments/tests/snapshots/terracotta__ui__features__environments__tests__matrix__shared_workspace_80x24.snap
---
source: src/ui/features/environments/tests/matrix.rs
expression: output
---
terracotta ▸ prod                                                           tofu
staging Error  │  staging Error
┌* [2] Differs across envs─────────────────────────────────────────────────────┐
│                                                                              │
│Synthetic acquisition error                                                   │
│Address     staging     staging      why                                      │
│                                                                              │
│Waiting for environment plans.                                                │
│                                                                              │
│blank: absent   .: unchanged   ?: plan unavailable                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[/] env | Enter preview | v full plan | / filter | ? help | q quit | 1/2 focus
f maximize
