src/ui/features/environments/tests/snapshots/terracotta__ui__features__environments__tests__matrix__three_environments_160x60.snap
---
source: src/ui/features/environments/tests/matrix.rs
expression: rendered
---
0 Overview   1 dev  2 prod [PROD]  3 stg                                                                                                              Ready: 3/3



  Address                      > dev         prod         stg        why

  Differs across envs
  terraform_data.api           ~           +/-          -            action

  Same change across envs
  [+] terraform_data.server[*] ~ 20        ~ 200        ~ 20

  Total                        +0 ~21 -0   +0 ~200 -0   +0 ~20 -1
                               0 replace   1 replace    0 replace
  blank: absent   .: unchanged   ?: plan unavailable












































  [ ] environment | Enter preview | / filter | e environments | Space expand all | v full plan | ? help | q quit
